--- a/proyectofinal/templates/quiz/update_user.html
+++ b/proyectofinal/templates/quiz/update_user.html
@@ -62,7 +62,7 @@ border-radius: 20px;
           {% csrf_token %}
           <div class="form-row">
             <div class="form-group col-md-6">
-            <label for="first_name" id="titulosp">Nombre/s</label>
+            <label for="first_name" id="titulosp">Nombre</label>
             {% render_field userForm.first_name class="form-control" placeholder="First Name" %}
             </div>
             <div class="form-group col-md-6">
