--- a/proyectofinal/templates/user/edit_profile.html
+++ b/proyectofinal/templates/user/edit_profile.html
@@ -80,7 +80,7 @@
         {% csrf_token %}
         <div class="form-row">
           <div class="form-group col-md-6">
-            <label for="first_name" id="titulosp">Nombre/s</label>
+            <label for="first_name" id="titulosp">Nombre</label>
             {% render_field userForm.first_name|attr:'required:true' class="form-control" placeholder="Ej. Fernando" %}
           </div>
           <div class="form-group col-md-6">
