modificación de estilos

--- a/proyectofinal/templates/quiz/admin_add_category.html
+++ b/proyectofinal/templates/quiz/admin_add_category.html
@@ -5,7 +5,7 @@
   
     <style>
   
-    input[type=text], select,input[type=number] ,input[type=password], textarea{
+    input[type=text], select,input[type=number], textarea{
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -35,7 +35,7 @@
           background: linear-gradient(#6d047bf5, #ffffff);
 
         }
-#id_course_name, #id_question_number, #id_total_marks {
+        #id_category_name, #id_question_number, #id_total_marks {
           border-radius: 20px;
           border-color:  rgb(68, 0, 124);
           border-width: 1px;
