--- a/proyectofinal/templates/quiz/update_category.html
+++ b/proyectofinal/templates/quiz/update_category.html
@@ -33,7 +33,7 @@
           background: linear-gradient(#6d047bf5, #ffffff);
 
         }
-#id_course_name, #id_question_number, #id_total_marks {
+#id_category_name, #id_question_number{
           border-radius: 20px;
           border-color:  rgb(68, 0, 124);
           border-width: 1px;
