--- a/proyectofinal/templates/user/user_exam.html
+++ b/proyectofinal/templates/user/user_exam.html
@@ -28,6 +28,11 @@
       border-color: #6d047bf5;
       color: white;
     }
+    th,
+    tr {
+      text-align: center;
+      color: black;
+    }
 
     .home-section {
       background: #00F260;
