--- a/proyectofinal/templates/quiz/ranking.html
+++ b/proyectofinal/templates/quiz/ranking.html
@@ -51,13 +51,16 @@
           </div>
           <table class="table table-hover" id="dev-table">
             <thead>
-              <tr>          
+              <tr>       
+                <th>Posición</th> 
                 <th>Usuario</th>
                 <th>Puntaje total</th>
+                
               </tr>
             </thead>
             {% for l in lista %}
               <tr>
+                <td>{{ forloop.counter }}</td>
               {% for key, value in l.items %}
                 <td>{{value}}</td>
               {% endfor %}
