--- a/proyectofinal/templates/user/take_exam.html
+++ b/proyectofinal/templates/user/take_exam.html
@@ -40,7 +40,7 @@
       margin-right: 20%;
       background: #ffffff;
       opacity: 90%;
-      border-radius: 20px;
+      border-radius: 30px !important;
       text-align: center;
       width: 60%;
       box-shadow: 1px 1px 1px 1px #6d047bf5;
