--- a/proyectofinal/templates/quiz/admin_view_user.html
+++ b/proyectofinal/templates/quiz/admin_view_user.html
@@ -3,6 +3,8 @@
 {%load static%}
 
 <head>
+  <title>Ver usuarios</title>
+  <link rel="shortcut icon" href="{% static '/image/log.png' %}" type="image/ico">
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
