--- a/proyectofinal/templates/quiz/adminbase.html
+++ b/proyectofinal/templates/quiz/adminbase.html
@@ -3,9 +3,8 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <link rel="shortcut icon" href="{% static '/image/log.png' %}" type="image/ico">
   <meta charset="utf-8">
-  
-
   <style media="screen">
     /* Google Fonts Import Link */
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
@@ -285,7 +284,7 @@
 <body>
     <div class="sidebar close">
       <div class="logo-details">
-        <img src="{% static 'image/logo.png' %}" alt="profileImg">
+        <img src="{% static 'image/log.png' %}" alt="profileImg">
         <span class="logo_name">Yunou</span>
       </div>
       <ul class="nav-links">
