--- a/proyectofinal/templates/quiz/index.html
+++ b/proyectofinal/templates/quiz/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html lang="en">
 <head>
-
+     <link rel="shortcut icon" href="{% static '/image/log.png' %}" type="image/ico">
      <title>Yunou</title>
 <!-- 
 Hydro Template 
@@ -137,7 +137,7 @@ http://www.templatemo.com/tm-509-hydro
 
                     <div class="col-md-4 col-sm-12">
                          <div class="about-image">
-                              <img src="{% static 'images/messi.png' %}" class="img-responsive" alt="">
+                              <img src="{% static 'image/logn.png' %}" class="img-responsive" alt="">
                          </div>
                     </div>
                     
@@ -161,8 +161,8 @@ http://www.templatemo.com/tm-509-hydro
                     <div class="col-md-3 col-sm-6">
                          <!-- WORK THUMB -->
                          <div class="work-thumb">
-                              <a href="{% static 'images/work-image1.jpg' %}" class="image-popup">
-                                   <img src="{% static 'images/work-image1.jpg' %}" class="img-responsive" alt="Work">
+                              <a href="{% static 'images/registrar.png' %}" class="image-popup">
+                                   <img src="{% static 'images/registrar.png' %}" class="img-responsive" alt="Work">
 
                                    <div class="work-info">
                                         <h3>Primer paso</h3>
@@ -175,8 +175,8 @@ http://www.templatemo.com/tm-509-hydro
                     <div class="col-md-3 col-sm-6">
                          <!-- WORK THUMB -->
                          <div class="work-thumb">
-                              <a href="{% static 'images/work-image2.jpg' %}" class="image-popup">
-                                   <img src="{% static 'images/work-image2.jpg' %}" class="img-responsive" alt="Work">
+                              <a href="{% static 'images/jugar.png' %}" class="image-popup">
+                                   <img src="{% static 'images/jugar.png' %}" class="img-responsive" alt="Work">
 
                                    <div class="work-info">
                                         <h3>Segundo paso</h3>
@@ -186,41 +186,28 @@ http://www.templatemo.com/tm-509-hydro
                          </div>
                     </div>
 
+                   
                     <div class="col-md-3 col-sm-6">
                          <!-- WORK THUMB -->
                          <div class="work-thumb">
-                              <a href="{% static 'images/work-image3.jpg' %}" class="image-popup">
-                                   <img src="{% static 'images/work-image3.jpg' %}" class="img-responsive" alt="Work">
+                              <a href="{% static 'images/jugar3.png' %}" class="image-popup">
+                                   <img src="{% static 'images/jugar3.png' %}" class="img-responsive" alt="Work">
 
                                    <div class="work-info">
                                         <h3>Tercer paso</h3>
-                                        <small>Elige la categoría en la que quieres jugar.</small>
+                                        <small>Elegí una categoría, lee las instrucciones de juego y dá click en comenzar.</small>
                                    </div>
                               </a>
                          </div>
                     </div>
-
                     <div class="col-md-3 col-sm-6">
                          <!-- WORK THUMB -->
                          <div class="work-thumb">
-                              <a href="{% static 'images/work-image4.jpg' %}" class="image-popup">
-                                   <img src="{% static 'images/work-image4.jpg' %}" class="img-responsive" alt="Work">
+                              <a href="{% static 'images/jugar4.png' %}" class="image-popup">
+                                   <img src="{% static 'images/jugar4.png' %}" class="img-responsive" alt="Work">
 
                                    <div class="work-info">
                                         <h3>Cuarto paso</h3>
-                                        <small>Lee las instrucciones de juego y dá click en comenzar.</small>
-                                   </div>
-                              </a>
-                         </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6">
-                         <!-- WORK THUMB -->
-                         <div class="work-thumb">
-                              <a href="{% static 'images/work-image4.jpg' %}" class="image-popup">
-                                   <img src="{% static 'images/work-image4.jpg' %}" class="img-responsive" alt="Work">
-
-                                   <div class="work-info">
-                                        <h3>Quinto paso</h3>
                                         <small>Al finalizar, podrás visualizar tus resultados y tus estadísticas.</small>
                                    </div>
                               </a>
