--- a/proyectofinal/templates/quiz/navbar.html
+++ b/proyectofinal/templates/quiz/navbar.html
@@ -54,7 +54,7 @@
 
   <div class="bs-example">
     <nav class="navbar navbar-expand-md  navbar-dark fixed-top" >
-    <span style="margin-right: 15px;"><img src="{% static "image/logo.png" %}" alt="profileImg"></span>
+    <span style="margin-right: 15px;"><img src='{% static "image/log.png" %}' alt="profileImg"></span>
       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
