--- a/proyectofinal/templates/quiz/update_category.html
+++ b/proyectofinal/templates/quiz/update_category.html
@@ -1,7 +1,10 @@
 {% extends 'quiz/adminbase.html' %}
 {% load widget_tweaks %}
 {% block content %}
+{%load static%}
 <head>
+  <title>Actualizar categoría</title>
+  <link rel="shortcut icon" href="{% static '/image/log.png' %}" type="image/ico">
   <style media="screen">
     input[type=text], select,input[type=number] ,input[type=password], textarea{
     width: 100%;
