--- a/proyectofinal/templates/user/user_dashboard.html
+++ b/proyectofinal/templates/user/user_dashboard.html
@@ -2,10 +2,13 @@
 {% extends 'user/userbase.html' %}
 {% load widget_tweaks %}
 {% block content %}
+{% load static %}
 
 <html lang="en" dir="ltr">
 
 <head>
+  <title>Yunou</title>
+  <link rel="shortcut icon" href="{% static '/image/log.png' %}" type="image/ico">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
