--- a/proyectofinal/templates/user/userbase.html
+++ b/proyectofinal/templates/user/userbase.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8" />
-
+  <link rel="shortcut icon" href="{% static '/image/log.png' %}" type="image/ico">
   <style media="screen">
     /* Google Fonts Import Link */
     @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
@@ -332,7 +332,7 @@
 <body>
   <div class="sidebar close">
     <div class="logo-details">
-      <img src="{% static 'image/logo.png' %}" alt="profileImg">
+      <img src="{% static 'image/log.png' %}" alt="profileImg">
       <span class="logo_name">Yunou</span>
     </div>
     <ul class="nav-links">
