--- a/proyectofinal/templates/user/userlogin.html
+++ b/proyectofinal/templates/user/userlogin.html
@@ -3,6 +3,8 @@
 {% load static %}
 <html lang="en" dir="ltr">
   <head>
+    <title>Ingresar</title>
+    <link rel="shortcut icon" href="{% static '/image/log.png' %}" type="image/ico">
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -15,7 +17,7 @@
     crossorigin="anonymous"
   ></script>
     <meta charset="utf-8" />
-    <title>Login</title>
+    
     <style media="screen">
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
       .box {
