--- a/proyectofinal/templates/user/usersignup.html
+++ b/proyectofinal/templates/user/usersignup.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 {% load widget_tweaks %}
+{% load static %}
 <html lang="en" dir="ltr">
 
 <head>
+  <title>Registro</title>
+  <link rel="shortcut icon" href="{% static '/image/log.png' %}" type="image/ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
