--- a/proyectofinal/templates/quiz/admin_question.html
+++ b/proyectofinal/templates/quiz/admin_question.html
@@ -1,9 +1,11 @@
 {% extends 'quiz/adminbase.html' %}
 {% load widget_tweaks %}
 {% block content %}
-
+{%load static%}
 
 <head>
+    <title>Preguntas</title>
+    <link rel="shortcut icon" href="{% static '/image/log.png' %}" type="image/ico">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
