--- a/proyectofinal/templates/quiz/ranking.html
+++ b/proyectofinal/templates/quiz/ranking.html
@@ -2,6 +2,8 @@
 {% block content %}
 {% load static %}
 <head>
+  <title>Ranking</title>
+    <link rel="shortcut icon" href="{% static '/image/log.png' %}" type="image/ico">
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
