--- a/proyectofinal/templates/quiz/view_question.html
+++ b/proyectofinal/templates/quiz/view_question.html
@@ -3,6 +3,8 @@
 {%load static%}
 
 <head>
+  <title>Ver preguntas</title>
+  <link rel="shortcut icon" href="{% static '/image/log.png' %}" type="image/ico">
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
@@ -59,8 +61,6 @@ background: linear-gradient(#6d047bf5, #ffffff);
         <tr>
 
           <th>Pregunta</th>
-         
-          <th>Puntaje</th>
           <th>Actualizar pregunta</th>
           <th>Eliminar pregunta</th>
         </tr>
@@ -69,9 +69,6 @@ background: linear-gradient(#6d047bf5, #ffffff);
       <tr>
 
         <td> {{c.question}}</td>
-        
-        <td>{{c.marks}}</td>
-
         <td><a class="btn btn-primary btn-xs" href="{% url 'update-question' c.id  %}"><span class="glyphicon glyphicon-edit"></span></a></td>
         <td><a class="btn btn-danger btn-xs" href="{% url 'delete-question' c.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
         
