--- a/proyectofinal/templates/user/edit_profile.html
+++ b/proyectofinal/templates/user/edit_profile.html
@@ -1,12 +1,14 @@
 {% extends 'user/userbase.html' %}
 {% load widget_tweaks %}
 {% block title %}
-<title>Editar perfil</title>
+
 {% endblock %}
 {% block content %}
 {%load static%}
 
 <head>
+  <title>Editar perfil</title>
+  <link rel="shortcut icon" href="{% static '/image/log.png' %}" type="image/ico">
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
