--- a/proyectofinal/templates/user/view_result.html
+++ b/proyectofinal/templates/user/view_result.html
@@ -3,6 +3,7 @@
 {%load static%}
 
 <head>
+  <link rel="shortcut icon" href="{% static '/image/log.png' %}" type="image/ico">  
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
@@ -21,11 +22,29 @@
     }
 
     #panel2 {
-      background: #2f323a;
+      background: #6d047bf5;
     }
 
     #panel {
-      border-color: #2f323a;
+      border-color: #6d047bf5;
+      color: black;
+    }
+
+    .home-section {
+      background: #00f260;
+      background: linear-gradient(#6d047bf5, #ffffff);
+    }
+
+    @media screen and (max-width: 600px) {
+      table {
+        display: block;
+        overflow-x: auto;
+      }
+    }
+
+    .panel-title {
+      font-family: "Poppins", sans-serif !important;
+      color: white;
     }
   </style>
 </head>
